refactor: Rename equipement to equipment
